WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187346
REGRESSION (
r230843
): Flash doesn't work; Produces blue box on page
https://bugs.webkit.org/show_bug.cgi?id=187346
Summary
REGRESSION (r230843): Flash doesn't work; Produces blue box on page
youenn fablet
Reported
2018-07-05 09:23:47 PDT
<
rdar://problem/41773974
>
Attachments
Patch
(9.94 KB, patch)
2018-07-05 10:55 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.82 MB, application/zip)
2018-07-05 12:06 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews102 for mac-sierra
(2.40 MB, application/zip)
2018-07-05 12:15 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-sierra
(3.02 MB, application/zip)
2018-07-05 12:39 PDT
,
EWS Watchlist
no flags
Details
Patch
(11.22 KB, patch)
2018-07-05 14:02 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.75 MB, application/zip)
2018-07-05 15:03 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(2.34 MB, application/zip)
2018-07-05 15:45 PDT
,
EWS Watchlist
no flags
Details
Patch
(13.57 KB, patch)
2018-07-05 17:32 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(13.50 KB, patch)
2018-07-05 20:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.82 MB, application/zip)
2018-07-05 22:18 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-07-05 10:55:04 PDT
Created
attachment 344341
[details]
Patch
EWS Watchlist
Comment 2
2018-07-05 12:06:56 PDT
Comment on
attachment 344341
[details]
Patch
Attachment 344341
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8447110
New failing tests: http/tests/plugins/plugin-allow-then-reload.html
EWS Watchlist
Comment 3
2018-07-05 12:06:58 PDT
Created
attachment 344349
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-07-05 12:15:20 PDT
Comment on
attachment 344341
[details]
Patch
Attachment 344341
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/8447149
New failing tests: http/tests/plugins/plugin-allow-then-reload.html
EWS Watchlist
Comment 5
2018-07-05 12:15:21 PDT
Created
attachment 344350
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-07-05 12:39:12 PDT
Comment on
attachment 344341
[details]
Patch
Attachment 344341
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/8447146
New failing tests: http/tests/plugins/plugin-allow-then-reload.html
EWS Watchlist
Comment 7
2018-07-05 12:39:14 PDT
Created
attachment 344352
[details]
Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
youenn fablet
Comment 8
2018-07-05 14:02:04 PDT
Created
attachment 344364
[details]
Patch
EWS Watchlist
Comment 9
2018-07-05 15:03:00 PDT
Comment on
attachment 344364
[details]
Patch
Attachment 344364
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8449305
New failing tests: http/tests/plugins/plugin-allow-then-reload.html
EWS Watchlist
Comment 10
2018-07-05 15:03:02 PDT
Created
attachment 344370
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 11
2018-07-05 15:45:09 PDT
Comment on
attachment 344364
[details]
Patch
Attachment 344364
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/8449482
New failing tests: animations/needs-layout.html
EWS Watchlist
Comment 12
2018-07-05 15:45:11 PDT
Created
attachment 344376
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
youenn fablet
Comment 13
2018-07-05 17:32:32 PDT
Created
attachment 344386
[details]
Patch
Ryosuke Niwa
Comment 14
2018-07-05 19:55:16 PDT
Comment on
attachment 344386
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344386&action=review
> Source/WebCore/testing/Internals.cpp:4643 > +#if PLATFORM(MAC)
Why does this code need to be macOS specific?
> LayoutTests/http/tests/plugins/plugin-allow-then-reload.html:18 > + if (window.testRunner) > + testRunner.setBlockAllPlugins(true);
I don't think it makes sense to guard this behind if (window.testRunner) since the test doesn't do anything useful without it, and you're exiting early above.
> LayoutTests/http/tests/plugins/plugin-allow-then-reload.html:37 > + console.log("number of plugins decreased after blocking: " + (test1 ? "PASS" : "FAIL")); > + console.log("number of plugins increased after allowing: " + (test2 ? "PASS" : "FAIL"));
Can't we just dump all of this into body instead?
youenn fablet
Comment 15
2018-07-05 20:11:06 PDT
Created
attachment 344399
[details]
Patch for landing
youenn fablet
Comment 16
2018-07-05 20:11:23 PDT
Thanks for the review, patch updated accordingly.
EWS Watchlist
Comment 17
2018-07-05 22:18:29 PDT
Comment on
attachment 344399
[details]
Patch for landing
Attachment 344399
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8452659
New failing tests: http/tests/security/video-poster-cross-origin-crash2.html
EWS Watchlist
Comment 18
2018-07-05 22:18:41 PDT
Created
attachment 344402
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 19
2018-07-05 22:50:24 PDT
Comment on
attachment 344399
[details]
Patch for landing Clearing flags on attachment: 344399 Committed
r233563
: <
https://trac.webkit.org/changeset/233563
>
WebKit Commit Bot
Comment 20
2018-07-05 22:50:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug