Source/WebCore/plugins/PluginInfoProvider.cpp
@@ -38,6 +38,12 @@ PluginInfoProvider::~PluginInfoProvider()
     ASSERT(m_pages.isEmpty());
 }
 
+void PluginInfoProvider::clearPagesPluginData()
+{
+    for (auto& page : m_pages)
+        page->clearPluginData();
+}
+
 void PluginInfoProvider::refresh(bool reloadPages)
 {
     refreshPlugins();
