Source/WebCore/plugins/PluginInfoProvider.h
@@ -38,6 +38,7 @@ public:
 
     void addPage(Page&);
     void removePage(Page&);
+    void clearPagesPluginData();
 
     virtual Vector<PluginInfo> pluginInfo(Page&, std::optional<Vector<SupportedPluginIdentifier>>&) = 0;
     virtual Vector<PluginInfo> webVisiblePluginInfo(Page&, const URL&) = 0;
